@@ -263,7 +263,7 @@
         <dependency>
             <groupId>com.github.Angeschossen</groupId>
             <artifactId>LandsAPI</artifactId>
-            <version>4.3.3.0</version>
+            <version>5.12.2</version>
             <scope>provided</scope>
         </dependency>
 
