@@ -3,6 +3,7 @@ Alpha 0.1.8.33
 - Removed a bunch of unused code to make updates a bit easier going forward.
 - Fix the /namedoor command giving you more sticks when running the command multiple times. Thanks, MiniMoro, for the bug report!
 - Add /newslidingdoor command as a shortcut command for creating new sliding doors. Thanks, Vexius, for the suggestion!
+- Update Lands integration for version 5 series. Thanks, Nimari, for the bug report!
 
 Alpha 0.1.8.32
 - Fixed end rods not rotating in the Big Door type. Thanks, Achaius, for the bug report!
